packages/yew-router-macro/tests/routable_derive/invalid-not-found-fail.stderr
error: there can only be one not_found
 --> $DIR/invalid-not-found-fail.rs:1:28
  |
1 | #[derive(Debug, PartialEq, yew_router::Routable)]
  |                            ^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: there can only be one not_found
  --> $DIR/invalid-not-found-fail.rs:11:28
   |
11 | #[derive(Debug, PartialEq, yew_router::Routable)]
   |                            ^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
